/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    `maven-publish`
}

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
}

dependencies {
    api(libs.junit.junit)
    api(libs.commons.io.commons.io)
    api(libs.cglib.cglib)
    api(libs.org.apache.commons.commons.lang3)
    api(libs.com.github.stuxuhai.jpinyin)
    api(libs.org.apache.logging.log4j.log4j.core)
    api(libs.org.projectlombok.lombok)
    api(libs.com.google.guava.guava)
    api(libs.org.mapdb.mapdb)
    testImplementation(libs.org.junit.jupiter.junit.jupiter)
}

group = "com.vaani"
version = "1.0.0-SNAPSHOT"
description = "algorithms-java"
java.sourceCompatibility = JavaVersion.VERSION_11

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}
